# NucME

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: Auto_Tree.yaml
Fluid-Mechanics/: streamline_pathline_streakline.py
Fluid-Mechanics/__marimo__/session/: streamline_pathline_streakline.py.json
Methods/: 02_Bisection_Method.py  03_False_Position_Method.py  05_Explicit_Euler_Method.ipynb
fluid-mechanics/: field_variables_visualization.py
fluid-mechanics/__marimo__/session/: velocity_field_visualization.py.json
lab/: .newton_method_for_root_approximation.ipynb.swp  approximate_sin_using_taylor_polynomials.ipynb  approximate_sin_using_taylor_polynomials.py  explicit_euler_method.py  implicit_euler_method.ipynb  newton_method_for_root_approximation.ipynb
lab/__marimo__/session/: bisection_method.py.json  false_position_method.py.json
test/: lab_test_01.py  newton_method_for_root_approximation.py
test/__marimo__/session/: lab_test_01.py.json
