[project]
name = "numerical-methods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
